<resources>
    <string name="app_name">Ecommerce</string>
    <string name="cari">Cari di Tokopedia</string>
    <string name="nav_home">Beranda</string>
    <string name="nav_catalogue">Katalog</string>
    <string name="nav_cart">Keranjang</string>
    <string name="nav_profile">Profil</string>
    <string name="this_a_banner">This A Banner</string>
    <string name="sepatu">Sepatu</string>
    <string name="sendal">Sendal</string>
    <string name="tas">Tas</string>
    <string name="kobe_v_protro">Kobe V Protro</string>
    <string name="big_stage_parade">Big Stage Parade</string>
    <string name="run_baby_run">Run Baby Run</string>
    <string name="rp_2_000_000">Rp. 2.000.000</string>
    <string name="rp_5_000_000">Rp. 5.000.000</string>
    <string name="rp_5_500_000">Rp. 5.500.000</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="closing_in">Closing in : </string>
    <string name="_02_31_22">02:31:22</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="walker_progo">Walker Progo</string>
    <string name="rp_1_231_000">Rp. 1.231.000</string>
    <string name="gucci_les_871">Gucci Les 871</string>
    <string name="rp_112_000_000">Rp. 112.000.000</string>
    <string name="noxelic_luxent_premium">Noxelic Luxent Premium</string>
    <string name="rp_320_000">Rp. 320.000</string>
    <string name="dikirim_ke">Dikirim ke</string>
    <string name="kontrakan_warna_pink_tengah_ali">Kontrakan warna Pink (Tengah) Ali</string>
    <string name="top_up_cuy">Top-up Cuy</string>
    <string name="bebas_ongkir">Bebas Ongkir</string>
    <string name="_4x_lagi">4x Lagi</string>
    <string name="target">Target</string>
    <string name="_18_target">18 Target</string>
    <string name="_8761_saham">8761 Saham</string>
    <string name="fassion_wanita">Fassion</string>
    <string name="otomotif">Otomotif</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="alamat_pengiriman">Alamat Pengiriman</string>
    <string name="pilih_alamat_lain">Pilih Alamat Lain</string>
    <string name="kontrakan_warna_pink_tengah">Kontrakan Warna Pink (Tengah)</string>
    <string name="utama">Utama</string>
    <string name="ali_imran_08219811211">Ali Imran (08219811211)</string>
    <string name="jl_nin_aja_dulu_sapatau_nyaman_yakan_kec_patampanua_kab_pinrang_sulawesi_selatan">Jl. Nin Aja dulu sapatau nyaman yakan, Kec. Patampanua, Kab. Pinrang, Sulawesi Selatan</string>
    <string name="toko_jaya_esport">Toko Jaya Esport</string>
    <string name="jakarta_pusat">Jakarta Pusat  |  </string>
    <string name="_1_barang_1_kg">1 barang (1 kg)</string>
    <string name="pilih_pengiriman">Pilih Pengiriman</string>
    <string name="subtotal">Subtotal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="slider">
        <item>https://images.tokopedia.net/img/cache/500/coCfvv/2021/7/3/6e95379c-8c99-40f3-bd0c-d10521fb05ab.jpg.webp?ect=4gaaa</item>
        <item>https://images.tokopedia.net/img/cache/500/coCfvv/2021/7/3/15446573-6c21-4bc3-a6f3-4e8db55a6cc4.jpg.webp?ect=4g</item>
    </string-array>

    <string-array name="company">
        <item>Official \n Sore</item>
        <item>Lihat \n Semua</item>
        <item>Ibu dan Bayi</item>
        <item>Top-up dan \n Tagihan</item>
        <item>Keuangan</item>
        <item>Travel dan \n Entertaiment</item>
        <item>Kesehatan</item>
        <item>Rumah Tangga</item>
    </string-array>

    <string-array name="avatar">
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/7/4/2de4419b-d86f-4b10-a8f0-b0899c46eb40.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/25916fd0-94f8-467a-a0e4-be6049ba820d.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/3c904c97-8e0a-415e-9da5-dfed91c301ee.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/ec5c92cb-6b3d-4643-b273-dcc431b388fc.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/8979eb85-1229-459e-897c-169c7055462e.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/c46eed8a-9e2c-4877-9ee0-78f9e77a59e4.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/40a65733-60b7-46f4-af28-1253e96803a3.png?ect=4g</item>
        <item>https://images.tokopedia.net/img/cache/64-square/iEWsxH/2021/4/19/5d3183b0-ca7e-4004-be96-51d78c9b8d75.png?ect=4g</item>
    </string-array>

</resources>