<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/alamat_pengiriman"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textColor="@color/ijo"
                android:text="@string/pilih_alamat_lain"/>

        </RelativeLayout>

        <View
            android:background="#DDDD"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            />

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/kontrakan_warna_pink_tengah"
                />

            <TextView
                android:background="@drawable/utama_background"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:text="@string/utama"
                />

        </LinearLayout>

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ali_imran_08219811211"/>

        <TextView
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@string/jl_nin_aja_dulu_sapatau_nyaman_yakan_kec_patampanua_kab_pinrang_sulawesi_selatan"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>